<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_app_vote"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_F5"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_add_orders"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="center">

                <TextView
                    style="@style/text_blue_16"
                    android:layout_width="176dp"
                    android:layout_height="38dp"
                    android:background="@drawable/vote_btn_add_day"
                    android:gravity="center"
                    android:text="添加订单"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_orders_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">
                <!-- 商品名称和地址 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_apply_vote_goods_name"
                        style="@style/text_4_16"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        tools:text="商品名称"/>

                    <TextView
                        android:id="@+id/tv_apply_vote_address"
                        style="@style/text_4_16"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical|right"
                        android:maxLines="1"
                        tools:text="商品地址"
                        tools:visibility="visible"
                        android:visibility="gone"/>

                </LinearLayout>

                <View style="@style/line_D8_margin15"></View>

                <!-- 订单号 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_4_16"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/orderinfo_order_num"/>

                    <TextView
                        android:id="@+id/tv_apply_vote_orders_num"
                        style="@style/text_4_16"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"/>

                </LinearLayout>

                <View style="@style/line_D8_margin15"></View>
                <!-- 支付金额 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/text_4_16"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/commitorder_payment"/>

                    <TextView
                        android:id="@+id/tv_apply_vote_payment"
                        style="@style/text_red_16"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    style="@style/title_gray"
                    android:text="赔付金额"/>

                <View style="@style/line_D8_margin15"></View>

                <EditText
                    android:id="@+id/et_money_input"
                    style="@style/text_4_16"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:hint="请输入赔付金额"
                    android:maxLines="1"
                    android:inputType="number|numberDecimal"
                    android:paddingBottom="8dp"
                    android:textColorHint="@color/gray_C0"/>

                <View style="@style/line_D8_margin15"></View>

                <TextView
                    android:id="@+id/tv_over_money"
                    style="@style/text_4_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/detail_icon_warning"
                    android:drawablePadding="10dp"
                    android:gravity="bottom"/>

                <View style="@style/line_D8_margin15"></View>

                <TextView
                    style="@style/title_gray"
                    android:text="理由"/>

                <View style="@style/line_D8_margin15"></View>

                <EditText
                    android:id="@+id/et_reason_input"
                    style="@style/text_4_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:hint="@string/application_public_reason_input"
                    android:textColorHint="@color/gray_C0"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_public_vote_sure"
        style="@style/one_button_style"
        android:text="@string/sure"/>

</LinearLayout>